--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+
 body {
 
     margin: 0px;
     padding: 0px;
-    background-color: #F4FFF8;
+    background-color:#F4FFF8;
 
 }
 
+
+.logo{
+    width: 300px;
+    margin: 8px;
+    border-radius: 24px;
+}
 header{
+  
+    text-align: center;
     background-color: #1C3738;
+    
 }
 
+header h1{
+    font-family:  "Chakra Petch", sans-serif;
+    text-align: center;
+    color: #8BAAAD;
+    border-top: 40px;
+    font-size: 50px;
+}
+main p{
+    font-family: "Chakra Petch", sans-serif;
+    font-size: 25px;
+}
+.car{
+    display: flex;
+}
+
+.card{
+    margin: 20px;
+    width: 300px;
+    border-radius: 20px;
+    overflow: hidden;
+    
+    font-family: "Chakra Petch", sans-serif;
+    background-color: #8BAAAD;
+    text-align: center;
+
+}
+
+.card:hover{
+    box-shadow: 0px 5px 10px #000;
+    transform: scale(1.10);
+    background-color: #706993;
+    
+}
+
+.card img{
+    width: 100%;
+    height: 175px;
+}
+
+.cardcontent h1{
+    color: #1C3738;
+
+}
+
+
+main h1{
+    padding-left: 10px;
+    font-family: "Chakra Petch", sans-serif;
+
+}
+
+p{
+    padding-left: 10px;
+}
 nav a{
     text-decoration: none;
     color: #8BAAAD;
     font-size: 30px;
     text-align: center;
+}
+
+.ti{
+
+    margin-left: 20px;
+    
+}
+
+.fo{
+    width: 650px;
+   text-align: center;
+   margin-right: 20px;
+   margin-bottom: 20px;
+    border-radius: 16px;
+    margin-left: 20px;
+}
+.kola{
+    display: flex;
 }
 
 nav li {
@@ -24,4 +108,23 @@ nav li {
 }
 nav a:hover{
     text-decoration: underline;
+}
+
+.mi{
+    text-align: right;
+   margin:20px;
+}
+
+.li{
+    text-align: left;
+    margin: 20px;
+    margin-left: 20px;
+}
+
+footer{
+    text-align: center;
+    padding: 20px;
+    color: #F4FFF8;
+    background-color:#000F08;
+    margin-top: 20px;
 }
